force-app/main/default/objects/Portfolio__c/Portfolio__c.object-meta.xml
<CustomObject>
    <description>A grouping or &quot;portfolio&quot; that represents the linked proposals</description>
    <label>Portfolio</label>
    <nameField>
        <label>Portfolio Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portfolios</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>