force-app/main/default/objects/Portfolio__c/fields/Award_notification_deadline__c.field-meta.xml
<CustomField>
    <fullName>Award_notification_deadline__c</fullName>
    <description>Date by which we promise to notify the group whether they have been awarded or not (Used to autopopulate Proposal record upon application/proposal creation)</description>
    <inlineHelpText>Date by which we promise to notify the group whether they have been awarded or not (Used to autopopulate Proposal record upon application/proposal creation)</inlineHelpText>
    <label>Award notification deadline</label>
    <type>Date</type>
</CustomField>