force-app/main/default/objects/Portfolio__c/fields/Date_ended__c.field-meta.xml
<CustomField>
    <fullName>Date_ended__c</fullName>
    <description>Date on which portfolio was terminated</description>
    <inlineHelpText>Date on which portfolio was terminated</inlineHelpText>
    <label>Date ended</label>
    <type>Date</type>
</CustomField>