force-app/main/default/objects/Portfolio__c/fields/Eligibility_By_invitation__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_By_invitation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked and the eligibility deadline hasn&apos;t passed, then this portfolio&apos;s eligibility forms are only accessible to accounts linked to the portfolio.  If unchecked (and deadline hasn&apos;t passed), then the eligibility forms are open to all.</description>
    <inlineHelpText>If checked and the eligibility deadline hasn&apos;t passed, then this portfolio&apos;s eligibility forms are only accessible to accounts linked to the portfolio.  If unchecked (and deadline hasn&apos;t passed), then the eligibility forms are open to all.</inlineHelpText>
    <label>Eligibility: By invitation</label>
    <type>Checkbox</type>
</CustomField>