force-app/main/default/objects/Portfolio__c/fields/Eligibility_deadline__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_deadline__c</fullName>
    <description>The date by which eligibility form (if any) must be submitted for the RFP associated with this restricted portfolio</description>
    <inlineHelpText>The date by which eligibility form (if any) must be submitted for the RFP associated with this restricted portfolio</inlineHelpText>
    <label>Eligibility deadline</label>
    <type>Date</type>
</CustomField>