force-app/main/default/objects/Portfolio__c/fields/Invite_deadline__c.field-meta.xml
<CustomField>
    <fullName>Invite_deadline__c</fullName>
    <description>Date by which the group must submit their application (Used to autopopulate Proposal record upon application/proposal creation)</description>
    <inlineHelpText>Date by which the group must submit their application (Used to autopopulate Proposal record upon application/proposal creation)</inlineHelpText>
    <label>Invite deadline</label>
    <type>Date</type>
</CustomField>