force-app/main/default/objects/Portfolio__c/fields/Name_with_type__c.field-meta.xml
<CustomField>
    <fullName>Name_with_type__c</fullName>
    <description>Portfolio type followed by name</description>
    <formula>TEXT(Type__c) &amp; &quot;: &quot; &amp;  Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Portfolio type followed by name</inlineHelpText>
    <label>Name with type</label>
    <type>Text</type>
</CustomField>