force-app/main/default/objects/Portfolio__c/fields/Num_accounts__c.field-meta.xml
<CustomField>
    <fullName>Num_accounts__c</fullName>
    <description>The number of accounts linked to this portfolio</description>
    <inlineHelpText>The number of accounts linked to this portfolio</inlineHelpText>
    <label>Num accounts</label>
    <summaryForeignKey>Portfolio_Account_Assign__c.Portfolio__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>