force-app/main/default/objects/Portfolio__c/fields/Num_profiles__c.field-meta.xml
<CustomField>
    <fullName>Num_profiles__c</fullName>
    <description>The number of profiles linked to this portfolio</description>
    <inlineHelpText>The number of profiles linked to this portfolio</inlineHelpText>
    <label>Num profiles</label>
    <summaryForeignKey>Portfolio_Profile_Assign__c.Portfolio__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>