force-app/main/default/objects/Portfolio__c/fields/Num_proposals__c.field-meta.xml
<CustomField>
    <fullName>Num_proposals__c</fullName>
    <description>The number of proposals linked to this portfolio</description>
    <inlineHelpText>The number of proposals linked to this portfolio</inlineHelpText>
    <label>Num proposals</label>
    <summaryForeignKey>Portfolio_Assignment__c.Portfolio__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>