force-app/main/default/objects/Portfolio__c/fields/Short_name__c.field-meta.xml
<CustomField>
    <fullName>Short_name__c</fullName>
    <description>Shorthand version of portfolio&apos;s name</description>
    <inlineHelpText>Shorthand version of portfolio&apos;s name</inlineHelpText>
    <label>Short name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>