force-app/main/default/objects/Portfolio__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of portfolio (i.e., grantmaking, general fundraising, grantee initiative, etc.)</description>
    <inlineHelpText>Type of portfolio (i.e., grantmaking, general fundraising, grantee initiative, etc.)</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Priority</fullName>
            </value>
            <value>
                <fullName>Advisor assignments</fullName>
            </value>
            <value>
                <fullName>Saved Set</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>