force-app/main/default/objects/Portfolio__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Purpose__c</columns>
    <columns>Date_started__c</columns>
    <columns>Date_ended__c</columns>
    <columns>Num_proposals__c</columns>
    <columns>Num_accounts__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>